applet: indicate true signal strength in wifi connected notification

Instead of showing always full bars.

[thaller@redhat.com: modified original patch]

https://bugzilla.gnome.org/show_bug.cgi?id=686357